--- a/AirMonitor/AirMonitor/App.xaml
+++ b/AirMonitor/AirMonitor/App.xaml
@@ -7,39 +7,11 @@
              x:Class="AirMonitor.App">
     <Application.Resources>
         <ResourceDictionary>
-          <!--Colors-->
-            <Color x:Key="frameBackgroundColor">#33f069</Color>
-            <!--LabelColors-->
-            <Color x:Key="secondLabelTextColor">Black</Color>
-            <Color x:Key="thirdLabelTextColor">Black</Color>
-            <Color x:Key="fourthLabelTextColor">Black</Color>
-            <Color x:Key="fifthLabelTextColor">Black</Color>
-            <!--SpanColors-->
-            <Color x:Key="firstSpanTextColor">Black</Color>
-            <Color x:Key="thirdSpanTextColor">DarkSlateGray</Color>
-            <Color x:Key="fourthSpanTextColor">Black</Color>
-            <Color x:Key="fifthSpanTextColor">Black</Color>
-            <Color x:Key="sixthSpanTextColor">Black</Color>
-            <Color x:Key="seventhSpanTextColor">Black</Color>
-            <Color x:Key="eighthSpanTextColor">Black</Color>
-            <Color x:Key="ninthSpanTextColor">Black</Color>
-            <!--BoxViewColors-->
-            <Color x:Key="firstBoxViewBackgroundColor">LightGray</Color>
-            <Color x:Key="secondBoxViewBackgroundColor">LightGray</Color>
-            <Color x:Key="thirdBoxViewBackgroundColor">LightGray</Color>
-            <Color x:Key="fourthBoxViewBackgroundColor">LightGray</Color>
-            <!--SliderColors-->
-            <Color x:Key="sliderMinimumTrackColor">CornflowerBlue</Color>
-            <Color x:Key="sliderMaximumTrackColor">Gray</Color>
-            <Color x:Key="sliderThumbColor">CornflowerBlue</Color>
-            <Color x:Key="secondSliderMinimumTrackColor">CornflowerBlue</Color>
-            <Color x:Key="secondSliderMaximumTrackColor">Gray</Color>
-            <Color x:Key="secondSliderThumbColor">CornflowerBlue</Color>
-            <!--ImageButtonColors-->
-            <Color x:Key="ImageButtonBackgroundColor">Transparent</Color>
-            
-           
+            <ResourceDictionary.MergedDictionaries >
 
+                <ResourceDictionary Source="../Colors.xaml"/>
+                <ResourceDictionary Source="../Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
