--- a/AirMonitor/AirMonitor/Views/Controls/ContentWithHeader.xaml
+++ b/AirMonitor/AirMonitor/Views/Controls/ContentWithHeader.xaml
@@ -6,13 +6,14 @@
     <StackLayout.Resources>
         <ResourceDictionary>
             <Style TargetType="Label">
-                <Setter Property="FontSize" Value="14"/>
-                <Setter Property="TextColor" Value="Gray"/>
+                <Setter Property="FontSize" Value="14"></Setter>
+                <Setter Property="TextColor" Value="Black"></Setter>
             </Style>
         </ResourceDictionary>
     </StackLayout.Resources>
     <Label
-        Text="{Binding Path=Title, Source={x:Reference RootView}}"/>
+        Text="{Binding Path=Title, Source={x:Reference RootView}}"
+         />
     <ContentView
         Content="{Binding Path=ControlContent, Source={x:Reference RootView}}"/>
 </StackLayout>
