--- a/AirMonitor/AirMonitor/Views/RootTabbedPage.xaml
+++ b/AirMonitor/AirMonitor/Views/RootTabbedPage.xaml
@@ -3,8 +3,7 @@
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             x:Class="AirMonitor.Views.RootTabbedPage"
             xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
-            xmlns:views="clr-namespace:AirMonitor.Views"
-            android:TabbedPage.ToolbarPlacement="Bottom">
+            xmlns:views="clr-namespace:AirMonitor.Views">
     <NavigationPage Title="Home" IconImageSource="baseline_home_black_24">
         <x:Arguments>
             <views:HomePage/>
